changes added with modification in js and file allignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4060,7 +4060,7 @@ h1.xlarge {
 @media (max-width: 580px) {
 /* phones (portrait and landscape) ----------- */
 	
-.xs3Response . {
+.xs3Response {
  width: 50% !important;
 }
 .sliderTextFull {
